Fix dark mode bug in the timezone dropdown

--- a/static/css/bootstrap-colors.css
+++ b/static/css/bootstrap-colors.css
@@ -32,6 +32,10 @@
     color:  var(--btn-default-color);
 }
 
+.bootstrap-select .no-results {
+    background:  var(--panel-bg);
+}
+
 .alert-info {
     background-color: var(--state-info-bg);
     border-color: var(--state-info-border);
